--- a/MISA.EMIS.MF734.PVTHANG/MISA.EMIS.MF734.PVTHANG.Service/MISA.EMIS.MF734.PVTHANG.Service.csproj
+++ b/MISA.EMIS.MF734.PVTHANG/MISA.EMIS.MF734.PVTHANG.Service/MISA.EMIS.MF734.PVTHANG.Service.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.8.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\MISA.EMIS.MF734.PVTHANG.Common\MISA.EMIS.MF734.PVTHANG.Common.csproj" />
     <ProjectReference Include="..\MISA.EMIS.MF734.PVTHANG.DataLayer\MISA.EMIS.MF734.PVTHANG.DataLayer.csproj" />
   </ItemGroup>
